@@ -96,6 +96,8 @@ Improvements:
 	Split CIV4GameText XML files for Options into individual files matching the Config folder
 - BugEventManager
 	Added addPopupHandlers() that takes the name and functions as parameters instead of a single tuple
+- Configuration
+	Added a warning when you specify a key for an <option> or <list> that is outside an <options> or <section> element.
 
 Bug Fixes:
 
